[gd_scene load_steps=3 format=2]

[ext_resource path="res://playerside/PlayerSide.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayerSideA" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 54 )
handcolor = Color( 1, 0.5, 0.5, 1 )
attacking = false
dodging = false

[node name="PlayerSideB" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 800 )
rotation = 3.14159
handcolor = Color( 0.5, 0.5, 1, 1 )
attacking = false
dodging = false

[node name="ResetButtons" type="Control" parent="."]
pause_mode = 2
visible = false
margin_left = 195.0
margin_top = 407.0
margin_right = 195.0
margin_bottom = 407.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="ResetButtons"]
margin_right = 90.0
margin_bottom = 40.0

[node name="ResetButtonA" type="Button" parent="ResetButtons/Panel"]
margin_top = 20.0
margin_right = 90.0
margin_bottom = 40.0
size_flags_vertical = 8
text = "PLAY AGAIN"
flat = true

[node name="ResetButtonB" type="Button" parent="ResetButtons/Panel"]
margin_right = 90.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "PLAY AGAIN"
flat = true

[connection signal="loss" from="PlayerSideA" to="." method="_on_PlayerSideA_loss"]
[connection signal="loss" from="PlayerSideB" to="." method="_on_PlayerSideB_loss"]
[connection signal="pressed" from="ResetButtons/Panel/ResetButtonA" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="ResetButtons/Panel/ResetButtonB" to="." method="_on_ResetButton_pressed"]
